[gd_scene load_steps=2 format=3 uid="uid://b5rjo5boss5mu"]

[ext_resource type="Script" uid="uid://l46tq17m2ah4" path="res://Scripts/LobbyMenu.gd" id="1_1ok85"]

[node name="LobbyMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_1ok85")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 36.0
offset_right = 205.0
offset_bottom = 143.0
scale = Vector2(0.437818, 0.552422)

[node name="RoomNameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Введите название комнаты"

[node name="CreateLobbyButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Создать лобби"

[node name="JoinLobbyButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Присоединиться к лобби
"
